--- a/src/Brainf_ckSharp.UWP/Controls/Host/InputPanel/Header/StdinHeader.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/InputPanel/Header/StdinHeader.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.UWP.Controls.InputPanel.Header.StdinHeader"
+    x:Class="Brainf_ckSharp.UWP.Controls.Host.InputPanel.Header.StdinHeader"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:header="using:Brainf_ckSharp.UWP.Controls.InputPanel.Header"
     xmlns:functions="using:Brainf_ckSharp.UWP.Bindings.Functions"
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
+    xmlns:header1="using:Brainf_ckSharp.UWP.Controls.Host.InputPanel.Header"
     mc:Ignorable="d"
     d:DesignHeight="48"
     d:DesignWidth="400">
@@ -41,12 +41,12 @@
         </VisualStateManager.VisualStateGroups>
 
         <!--Sections-->
-        <header:MinimalHeaderButton
+        <header1:MinimalHeaderButton
             Grid.Column="0"
             Icon="{StaticResource OperatorsKeyboardIcon}"
             IsSelected="{x:Bind functions:PivotSelectionFunctions.IndexToBool(SelectedIndex, 0), Mode=OneWay}"
             Selected="VirtualKeyboardHeaderSelected"/>
-        <header:MinimalHeaderButton
+        <header1:MinimalHeaderButton
             Icon="{StaticResource QuickMemoryViewerIcon}"
             Grid.Column="1"
             IsSelected="{x:Bind functions:PivotSelectionFunctions.IndexToBool(SelectedIndex, 1), Mode=OneWay}"
