--- a/src/Brainf_ckSharp.UWP/Controls/Host/InputPanel/VirtualKeyboard/OperatorsKeyboard.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/InputPanel/VirtualKeyboard/OperatorsKeyboard.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.UWP.Controls.InputPanel.VirtualKeyboard.OperatorsKeyboard"
+    x:Class="Brainf_ckSharp.UWP.Controls.Host.InputPanel.VirtualKeyboard.OperatorsKeyboard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:virtualKeyboard="using:Brainf_ckSharp.UWP.Controls.InputPanel.VirtualKeyboard"
+    xmlns:virtualKeyboard1="using:Brainf_ckSharp.UWP.Controls.Host.InputPanel.VirtualKeyboard"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -27,23 +27,23 @@
         </Grid.ColumnDefinitions>
 
         <!--First row (><+-)-->
-        <virtualKeyboard:OperatorButton
+        <virtualKeyboard1:OperatorButton
             Operator="{StaticResource ForwardPtr}"
             Description="++ptr"
             Click="OperatorButton_OnClick"/>
-        <virtualKeyboard:OperatorButton
+        <virtualKeyboard1:OperatorButton
             Operator="{StaticResource BackwardPtr}"
             Description="--ptr"
             Grid.Row="0"
             Grid.Column="1"
             Click="OperatorButton_OnClick"/>
-        <virtualKeyboard:OperatorButton
+        <virtualKeyboard1:OperatorButton
             Operator="{StaticResource Plus}"
             Description="(*ptr)++"
             Grid.Row="0"
             Grid.Column="2"
             Click="OperatorButton_OnClick"/>
-        <virtualKeyboard:OperatorButton
+        <virtualKeyboard1:OperatorButton
             Operator="{StaticResource Minus}"
             Description="(*ptr)--"
             Grid.Row="0"
@@ -51,25 +51,25 @@
             Click="OperatorButton_OnClick"/>
 
         <!--Second row ([].,)-->
-        <virtualKeyboard:OperatorButton
+        <virtualKeyboard1:OperatorButton
             Operator="{StaticResource LoopStart}"
             Description="while (*ptr) {"
             Grid.Row="1"
             Grid.Column="0"
             Click="OperatorButton_OnClick"/>
-        <virtualKeyboard:OperatorButton
+        <virtualKeyboard1:OperatorButton
             Operator="{StaticResource LoopEnd}"
             Description="}"
             Grid.Row="1"
             Grid.Column="1"
             Click="OperatorButton_OnClick"/>
-        <virtualKeyboard:OperatorButton
+        <virtualKeyboard1:OperatorButton
             Operator="{StaticResource PrintChar}"
             Description="putchar(*ptr)"
             Grid.Row="1"
             Grid.Column="2"
             Click="OperatorButton_OnClick"/>
-        <virtualKeyboard:OperatorButton
+        <virtualKeyboard1:OperatorButton
             Operator="{StaticResource ReadChar}"
             Description="*ptr = getchar()"
             Grid.Row="1"
@@ -91,17 +91,17 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <virtualKeyboard:OperatorButton
+            <virtualKeyboard1:OperatorButton
                 Operator="{StaticResource FunctionStart}"
                 Description="f ("
                 Click="OperatorButton_OnClick"/>
-            <virtualKeyboard:OperatorButton
+            <virtualKeyboard1:OperatorButton
                 Operator="{StaticResource FunctionEnd}"
                 Description=")"
                 Grid.Row="0"
                 Grid.Column="1"
                 Click="OperatorButton_OnClick"/>
-            <virtualKeyboard:OperatorButton
+            <virtualKeyboard1:OperatorButton
                 Operator="{StaticResource FunctionCall}"
                 Description="call"
                 Grid.Row="1"
