--- a/src/Brainf_ckSharp.UWP/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/Shell.xaml
@@ -1,16 +1,16 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.UWP.Controls.Shell"
+    x:Class="Brainf_ckSharp.UWP.Controls.Host.Shell"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:header="using:Brainf_ckSharp.UWP.Controls.Header"
     xmlns:markupExtensions="using:Brainf_ckSharp.UWP.MarkupExtensions"
     xmlns:controls="using:Brainf_ckSharp.UWP.Controls.Windows.UI.Xaml.Controls"
     xmlns:telerik="using:Brainf_ckSharp.UWP.Controls.Telerik.UI.Controls"
-    xmlns:virtualKeyboard="using:Brainf_ckSharp.UWP.Controls.InputPanel.VirtualKeyboard"
-    xmlns:inputPanel="using:Brainf_ckSharp.UWP.Controls.InputPanel.Header"
     xmlns:views="using:Brainf_ckSharp.UWP.Views"
+    xmlns:header="using:Brainf_ckSharp.UWP.Controls.Host.Header"
+    xmlns:header1="using:Brainf_ckSharp.UWP.Controls.Host.InputPanel.Header"
+    xmlns:virtualKeyboard="using:Brainf_ckSharp.UWP.Controls.Host.InputPanel.VirtualKeyboard"
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="400">
@@ -58,7 +58,7 @@
                 HeaderHeight="48"
                 ExpandableContentHeight="180">
                 <telerik:ExpanderControl.Header>
-                    <inputPanel:StdinHeader/>
+                    <header1:StdinHeader/>
                 </telerik:ExpanderControl.Header>
                 <telerik:ExpanderControl.ExpandableContent>
                     <virtualKeyboard:OperatorsKeyboard/>
