--- a/src/Brainf_ckSharp.UWP/Views/ConsoleView.xaml
+++ b/src/Brainf_ckSharp.UWP/Views/ConsoleView.xaml
@@ -102,7 +102,8 @@
 
     <!--Console view-->
     <ListView
-        ItemsSource="{x:Bind ViewModel.Source, Mode=OneWay}"
+        ItemsSource="{x:Bind ViewModel.Source}"
+        attachedProperties:AutoScrollingListViewHelper.IsAutoScrollEnabled="{x:Bind ViewModel.Source}"
         SelectionMode="None"
         Padding="0,4,0,0">
         <ListView.ItemTemplateSelector>
