Added main Pivot control and custom style

--- a/src/Brainf_ckSharp.UWP/App.xaml
+++ b/src/Brainf_ckSharp.UWP/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="Resources/Dictionaries/MDL2Icons.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionaries/Operators.xaml"/>
                 <ResourceDictionary Source="Styles/ButtonsStyles.xaml"/>
+                <ResourceDictionary Source="Styles/ClassicStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TelerikStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
