Added shell bindings to command buttons

--- a/src/Brainf_ckSharp.UWP/Controls/Host/Header/HeaderPanel.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/Header/HeaderPanel.xaml
@@ -38,7 +38,7 @@
             Icon="{StaticResource ConsoleIcon}"
             Text="Console"
             Height="68" Width="80"
-            IsSelected="{x:Bind functions:PivotSelectionFunctions.IndexToBool(SelectedIndex, 0), Mode=OneWay}"
+            IsSelected="{x:Bind functions:PivotSelectionFunctions.IndexToBool(SelectedIndex, 0), Mode=OneWay, FallbackValue=True}"
             Selected="ConsoleHeaderSelected"/>
 
         <!--IDE button-->
