--- a/src/Brainf_ckSharp.UWP/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/Shell.xaml
@@ -11,6 +11,7 @@
     xmlns:header="using:Brainf_ckSharp.UWP.Controls.Host.Header"
     xmlns:header1="using:Brainf_ckSharp.UWP.Controls.Host.InputPanel.Header"
     xmlns:virtualKeyboard="using:Brainf_ckSharp.UWP.Controls.Host.InputPanel.VirtualKeyboard"
+    xmlns:functions="using:Brainf_ckSharp.UWP.Bindings.Functions"
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="400">
@@ -81,7 +82,8 @@
         <controls:AnimatedCommandBar
             Grid.Row="4"
             IsDynamicOverflowEnabled="False"
-            Style="{StaticResource CommandBarRevealStyle}">
+            Style="{StaticResource CommandBarRevealStyle}"
+            IsPrimaryContentDisplayed="{x:Bind functions:PivotSelectionFunctions.IndexToBool(Header.SelectedIndex, 0), Mode=OneWay, FallbackValue=True}">
             <controls:AnimatedCommandBar.PrimaryCommands>
 
                 <!--Console buttons-->
@@ -165,25 +167,34 @@
                 <AppBarButton
                     Label="Repeat last script"
                     Icon="{markupExtensions:FontIcon Glyph={StaticResource RepeatScriptIcon}}"
-                    Click="{x:Bind ViewModel.RepeatLastConsoleScript}">
+                    Click="{x:Bind ViewModel.RepeatLastConsoleScript}"
+                    Visibility="{x:Bind functions:PivotSelectionFunctions.IndexToVisibility(Header.SelectedIndex, 0), Mode=OneWay}">
                     <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="F2" Modifiers="Control"/>
+                        <KeyboardAccelerator
+                            Key="F2" Modifiers="Control"
+                            IsEnabled="{x:Bind functions:PivotSelectionFunctions.IndexToBool(Header.SelectedIndex, 0), Mode=OneWay}"/>
                     </AppBarButton.KeyboardAccelerators>
                 </AppBarButton>
                 <AppBarButton
                     Label="Restart"
                     Icon="{markupExtensions:FontIcon Glyph={StaticResource RestartIcon}}"
-                    Click="{x:Bind ViewModel.RestartConsole}">
+                    Click="{x:Bind ViewModel.RestartConsole}"
+                    Visibility="{x:Bind functions:PivotSelectionFunctions.IndexToVisibility(Header.SelectedIndex, 0), Mode=OneWay}">
                     <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="F6" Modifiers="Control"/>
+                        <KeyboardAccelerator
+                            Key="F6" Modifiers="Control"
+                            IsEnabled="{x:Bind functions:PivotSelectionFunctions.IndexToBool(Header.SelectedIndex, 0), Mode=OneWay}"/>
                     </AppBarButton.KeyboardAccelerators>
                 </AppBarButton>
                 <AppBarButton
                     Label="Clear screen"
                     Icon="{markupExtensions:FontIcon Glyph={StaticResource ClearScreen}}"
-                    Click="{x:Bind ViewModel.ClearConsoleScreen}">
+                    Click="{x:Bind ViewModel.ClearConsoleScreen}"
+                    Visibility="{x:Bind functions:PivotSelectionFunctions.IndexToVisibility(Header.SelectedIndex, 0), Mode=OneWay}">
                     <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="F4" Modifiers="Control"/>
+                        <KeyboardAccelerator
+                            Key="F4" Modifiers="Control"
+                            IsEnabled="{x:Bind functions:PivotSelectionFunctions.IndexToBool(Header.SelectedIndex, 0), Mode=OneWay}"/>
                     </AppBarButton.KeyboardAccelerators>
                 </AppBarButton>
                 <AppBarButton
@@ -195,19 +206,26 @@
                 </AppBarButton>
                 <AppBarButton
                     Label="Show code library"
-                    Icon="{markupExtensions:FontIcon Glyph={StaticResource CodeLibraryIcon}}"/>
+                    Icon="{markupExtensions:FontIcon Glyph={StaticResource CodeLibraryIcon}}"
+                    Visibility="{x:Bind functions:PivotSelectionFunctions.IndexToVisibility(Header.SelectedIndex, 1), Mode=OneWay}"/>
                 <AppBarButton
                     Label="Save"
-                    Icon="{markupExtensions:FontIcon Glyph={StaticResource SaveIcon}}">
+                    Icon="{markupExtensions:FontIcon Glyph={StaticResource SaveIcon}}"
+                    Visibility="{x:Bind functions:PivotSelectionFunctions.IndexToVisibility(Header.SelectedIndex, 1), Mode=OneWay}">
                     <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="S" Modifiers="Control"/>
+                        <KeyboardAccelerator
+                            Key="S" Modifiers="Control"
+                            IsEnabled="{x:Bind functions:PivotSelectionFunctions.IndexToBool(Header.SelectedIndex, 1), Mode=OneWay}"/>
                     </AppBarButton.KeyboardAccelerators>
                 </AppBarButton>
                 <AppBarButton
                     Label="Save as"
-                    Icon="{markupExtensions:FontIcon Glyph={StaticResource SaveAsIcon}}">
+                    Icon="{markupExtensions:FontIcon Glyph={StaticResource SaveAsIcon}}"
+                    Visibility="{x:Bind functions:PivotSelectionFunctions.IndexToVisibility(Header.SelectedIndex, 1), Mode=OneWay}">
                     <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="S" Modifiers="Menu"/>
+                        <KeyboardAccelerator
+                            Key="S" Modifiers="Menu"
+                            IsEnabled="{x:Bind functions:PivotSelectionFunctions.IndexToBool(Header.SelectedIndex, 1), Mode=OneWay}"/>
                     </AppBarButton.KeyboardAccelerators>
                 </AppBarButton>
                 <AppBarSeparator/>
