Added FixedGridView control

--- a/src/Brainf_ckSharp.UWP/Controls/Host/InputPanel/MemoryViewer/CompactMemoryViewer.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/Host/InputPanel/MemoryViewer/CompactMemoryViewer.xaml
@@ -4,33 +4,27 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:Brainf_ckSharp.UWP.Controls.Windows.UI.Xaml.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <!--Memory cells list-->
-    <ListView
+    <!--Memory cells grid-->
+    <controls:FixedGridView
         ItemsSource="{x:Bind ViewModel.Source, Mode=OneWay}"
         SelectionMode="None"
         IsHitTestVisible="False">
-        <ListView.Header>
+        <controls:FixedGridView.Header>
             <Grid Height="12"/>
-        </ListView.Header>
-        <ListView.Footer>
+        </controls:FixedGridView.Header>
+        <controls:FixedGridView.Footer>
             <Grid Height="12"/>
-        </ListView.Footer>
-        <ListView.ItemTemplate>
+        </controls:FixedGridView.Footer>
+        <controls:FixedGridView.ItemTemplate>
             <DataTemplate>
                 <!--TODO-->
                 <Grid/>
             </DataTemplate>
-        </ListView.ItemTemplate>
-        <ListView.ItemsPanel>
-            <ItemsPanelTemplate>
-                <ItemsWrapGrid 
-                    Orientation="Horizontal"
-                    MaximumRowsOrColumns="5"/>
-            </ItemsPanelTemplate>
-        </ListView.ItemsPanel>
-    </ListView>
+        </controls:FixedGridView.ItemTemplate>
+    </controls:FixedGridView>
 </UserControl>
