--- a/src/Brainf_ckSharp.UWP/Styles/ClassicStyles.xaml
+++ b/src/Brainf_ckSharp.UWP/Styles/ClassicStyles.xaml
@@ -1,6 +1,20 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Brainf_ckSharp.UWP.Controls.Windows.UI.Xaml.Controls">
+
+    <!--Custom FixedFridView style-->
+    <Style TargetType="controls:FixedGridView">
+        <Setter Property="ItemsPanel">
+            <Setter.Value>
+                <ItemsPanelTemplate>
+                    <ItemsPanelTemplate>
+                        <ItemsWrapGrid Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ItemsPanelTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <!--Custom Pivot without margins and headers-->
     <Style TargetType="Pivot" x:Key="ExpandedPivotWithNoHeaderStyle">
